# solve-2048

./: CMakeLists.txt  new_project.sh  readme.md  replace_mainnamespace.sh
catch/: CMakeLists.txt
catch/include/catch/: CMakeLists.txt  EqualsMat.hpp  version.h.in
catch/src/: CMakeLists.txt  example.cpp  test.sh
common/include/common/: CMakeLists.txt  csvRow.h  fileStorageUtil.h  math.h  measureTime.h  rotationMatrices.h  setUtils.h  simpleStatistics.h  simpleStatistics.h.cpp  stringUtils.h  timing.h  types.h  version.h.in
common/src/: CMakeLists.txt  csvRow.cpp  measureTime.cpp  stringUtils.cpp  timing.cpp
game2048/: CMakeLists.txt
game2048/include/: CMakeLists.txt
game2048/include/game2048/: CMakeLists.txt  Cell.h  Direction.h  Game.h  GameState.h  Injection.h  InjectionMask.h  Slider.h
game2048/src/: CMakeLists.txt  GameState.cpp  Injection.cpp  InjectionMask.cpp  Slider.cpp  main.cpp
game2048/tests/: CMakeLists.txt  GameState.cpp  GameStateDataAccess.cpp  GameStateRotation.cpp  GameStateSlide.cpp  GameStateSlideLine.cpp  Injection.cpp  InjectionMask.cpp  SlideGameState.cpp  SlideLine.cpp
project_template/include/TEMPLATE/: CMakeLists.txt  version.h.in
project_template/src/: main.cpp
solver/: CMakeLists.txt
solver/src/: main.cpp
